<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

 <name>quad_navigation</name>
 <version>0.0.0</version>
 <description>Redirecting Vicon data to PX4 at specified frequency</description>
 <maintainer email="user@todo.todo">user</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>

 <depend>rclcpp</depend>
 <depend>std_msgs</depend>
 <depend>px4_msgs</depend>

 <buildtool_depend>eigen3_cmake_module</buildtool_depend>
 <build_depend>eigen</build_depend>

</package>